<resources>
    <string name="app_name">FinalProject</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome">Welcome</string>
    <string name="sign_in_to_continue">Sign in to Continue</string>
    <string name="your_email_address">Your Email Address</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember me</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="sign_in">Sign in</string>
    <string name="don_t_have_an_account_sign_up">Don\'t have an account? Sign Up</string>
    <string name="register">Register</string>
    <string name="enter_you_personal_details_to_create_your_account">Enter you personal details to create your account</string>
    <string name="full_name">Full Name</string>
    <string name="email_address">Email Address</string>
    <string name="phone_number">Phone Number</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="have_an_account_sign_in">Have an account? Sign In</string>
    <string name="home">Home</string>
    <string name="feeds">Feeds</string>
    <string name="transaction">Transaction</string>
    <string name="my_profile">My Profile</string>
    <string name="balance">Balance</string>
    <string name="my_reward">My Reward Point</string>
    <string name="Open_Drawer">Open Navigation Drawer</string>
    <string name="Close_Drawer">Close Navigation Drawer</string>
    <string name="logout">Logout</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="checkout">Checkout</string>
</resources>