<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#06AB8D"
    tools:context=".authentication.RegisterFragment">

    <View
        android:id="@+id/groupTop"
        android:layout_width="320.66dp"
        android:layout_height="161dp"
        android:background="@drawable/grouptop"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/guideline"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintVertical_bias="0.0"
        android:layout_marginTop="-10dp"
        android:layout_marginStart="-12dp"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins"
        android:text="@string/register"
        android:textAppearance="@style/header1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@id/guideline3"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.048" />

    <TextView
        android:id="@+id/txtFragmentInformation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_light"
        android:text="@string/enter_you_personal_details_to_create_your_account"
        android:textAppearance="@style/header2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@id/guideline3"
        app:layout_constraintTop_toBottomOf="@id/txtRegister"
        app:layout_constraintVertical_bias="0" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/roundrectangle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guideline2" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="143dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="381dp" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/guideline2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.06"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        app:boxBackgroundColor="@color/white"
        android:id="@+id/txtFullNameInput">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textPersonName"
            android:hint="@string/full_name"
            android:textColorHint="#8B9E9E"
            android:fontFamily="@font/poppins_light"
            android:textColor="#000000"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/txtFullNameInput"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.05"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        app:boxBackgroundColor="@color/white"
        android:id="@+id/txtEmailInput">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textEmailAddress"
            android:hint="@string/email_address"
            android:fontFamily="@font/poppins_light"
            android:textColorHint="#8B9E9E"
            android:textColor="#000000"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/txtEmailInput"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.05"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        app:boxBackgroundColor="@color/white"
        android:id="@+id/txtPhoneInput">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="phone|text"
            android:hint="@string/phone_number"
            android:textColorHint="#8B9E9E"
            android:fontFamily="@font/poppins_light"
            android:textColor="#000000"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/txtPhoneInput"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.05"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="30dp"
        app:errorEnabled="true"
        android:layout_marginEnd="30dp"
        app:boxBackgroundColor="@color/white"
        android:id="@+id/txtPasswordInput">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textPassword"
            android:hint="@string/password"
            android:textColorHint="#8B9E9E"
            android:fontFamily="@font/poppins_light"
            android:textColor="#000000"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:errorEnabled="true"
        app:layout_constraintTop_toBottomOf="@id/txtPasswordInput"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.05"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        app:boxBackgroundColor="@color/white"

        android:id="@+id/txtPasswordConfirmInput">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textPassword"
            android:hint="@string/confirm_password"
            android:fontFamily="@font/poppins_light"
            android:textColorHint="#8B9E9E"
            android:textColor="#000000"/>
    </com.google.android.material.textfield.TextInputLayout>
    
    <Button
        android:layout_width="325dp"
        android:layout_height="wrap_content"
        android:background="@drawable/button_background"
        app:backgroundTint="#FFB039"
        android:text="@string/sign_up"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtPasswordConfirmInput"
        app:layout_constraintBottom_toBottomOf="parent"
        android:fontFamily="@font/poppins"
        android:textSize="14sp"
        app:layout_constraintVertical_bias="0.244"
        android:id="@+id/btnSignUp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnSignUp"
        android:fontFamily="@font/poppins_light"
        app:layout_constraintBottom_toBottomOf="parent"
        android:id="@+id/btnSignIn"
        android:text="@string/have_an_account_sign_in"
        android:textSize="13sp"
        android:letterSpacing="0.03"
        app:layout_constraintVertical_bias="0.375"
        android:textColor="#000000"/>
</androidx.constraintlayout.widget.ConstraintLayout>